Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1933

Delphi generator crashes when a typedef references another typedef from an included file

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.9.1
    • None
    • Patch Available

    Description

      Due to a problem introduced with THRIFT-1904 the Thrift compiler could crash, when the IDL contains a typedef which references another typedef from an included IDL file. Additionally, a wrong "unresolved reference" may be emitted during the Delphi codegen phase.

      Attachments

        Issue Links

          Activity

            People

              jensg Jens Geyer
              jensg Jens Geyer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: