THRIFT-1933: Delphi generator crashes when a typedef references another typedef from an included file

Patch: Jens Geyer